# ChangeLog for kde-base/knode
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/kde-base/knode/ChangeLog,v 1.303 2014/03/11 13:06:29 johu Exp $

  11 Mar 2014; Johannes Huber <johu@gentoo.org> -knode-4.12.2.ebuild:
  Remove KDE SC 4.12.2

*knode-4.12.3 (04 Mar 2014)

  04 Mar 2014; Johannes Huber <johu@gentoo.org> +knode-4.12.3.ebuild:
  Version bump KDE SC 4.12.3

  23 Feb 2014; Agostino Sarubbo <ago@gentoo.org> -knode-4.11.2.ebuild:
  Remove old

  23 Feb 2014; Agostino Sarubbo <ago@gentoo.org> knode-4.11.5.ebuild:
  Stable for ppc64, wrt bug #493782

  20 Feb 2014; Agostino Sarubbo <ago@gentoo.org> knode-4.11.5.ebuild:
  Stable for ppc, wrt bug #493782

  16 Feb 2014; Agostino Sarubbo <ago@gentoo.org> knode-4.11.5.ebuild:
  Stable for x86, wrt bug #493782

  14 Feb 2014; Johannes Huber <johu@gentoo.org> -knode-4.12.1.ebuild,
  -knode-4.12.1-r1.ebuild:
  Remove KDE SC 4.12.1

  09 Feb 2014; Agostino Sarubbo <ago@gentoo.org> knode-4.11.5.ebuild:
  Stable for amd64, wrt bug #493782

*knode-4.12.2 (06 Feb 2014)

  06 Feb 2014; Andreas K. Huettel <dilfridge@gentoo.org> +knode-4.12.2.ebuild:
  Version bump KDE SC 4.12.2

*knode-4.12.1-r1 (27 Jan 2014)

  27 Jan 2014; Andreas K. Huettel <dilfridge@gentoo.org>
  +knode-4.12.1-r1.ebuild:
  Move all agents into kdepim-common-libs, bug 494754

  20 Jan 2014; Michael Palimaka <kensington@gentoo.org> -knode-4.12.0.ebuild:
  Remove KDE SC 4.12.0

  20 Jan 2014; Michael Palimaka <kensington@gentoo.org> knode-4.11.5.ebuild:
  Restore keywords that were accidentally omitted.

*knode-4.12.1 (18 Jan 2014)

  18 Jan 2014; Andreas K. Huettel <dilfridge@gentoo.org> +knode-4.12.1.ebuild:
  Version bump KDE SC 4.12.1

  10 Jan 2014; Chris Reffett <creffett@gentoo.org> -knode-4.11.4.ebuild:
  Remove KDE SC 4.11.4

*knode-4.11.5 (10 Jan 2014)

  10 Jan 2014; Chris Reffett <creffett@gentoo.org> +knode-4.11.5.ebuild:
  Bump KDE SC 4.11.5

*knode-4.12.0 (18 Dec 2013)
