@@ -1,6 +1,9 @@
 # ChangeLog for kde-base/knode
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/knode/ChangeLog,v 1.303 2014/03/11 13:06:29 johu Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/knode/ChangeLog,v 1.304 2014/03/20 21:54:09 dilfridge Exp $
+
+  20 Mar 2014; Andreas K. Huettel <dilfridge@gentoo.org> knode-4.4.11.1.ebuild:
+  Bump EAPI to 5.
 
   11 Mar 2014; Johannes Huber <johu@gentoo.org> -knode-4.12.2.ebuild:
   Remove KDE SC 4.12.2
